# Fast-LCD-I2C

./: .gitignore  Arduino Timing Results.txt  CMakeLists.txt  LICENSE  README.md  README.md.in  main.c  mainpage.dox
.github/workflows/: pages.yml
Arduino_Examples/Demo1602/: Demo1602.ino
Arduino_Examples/Demo2004/: Demo2004.ino
Arduino_Examples/HelloWorld/: HelloWorld.ino
Arduino_Examples/Timing_LCD_I2C/: Timing_LCD_I2C.ino
Arduino_Library/: LCD_I2C.cpp  LCD_I2C.h
C_Tests/: CMakeLists.txt
C_Tests/Pico_SDK_Example/: CMakeLists.txt  main.c
Cpp_Tests/: CMakeLists.txt
Cpp_Tests/Call_All/: CMakeLists.txt  main.cpp
Cpp_Tests/TimingTest/: CMakeLists.txt  main.cpp  xLCD_I2C.cpp  xLCD_I2C.hpp
Examples/: CMakeLists.txt
Pi_Pico_Examples/: CMakeLists.txt
Pi_Pico_Examples/C_Examples/: CMakeLists.txt
Pi_Pico_Examples/C_Examples/Demo_All_C/: CMakeLists.txt  Demo_All.c
Pi_Pico_Examples/C_Examples/HelloWorld/: CMakeLists.txt  HelloWorld.c
Pi_Pico_Examples/Cpp_Examples/: CMakeLists.txt
Pi_Pico_Examples/Cpp_Examples/Demo_All_Cpp/: CMakeLists.txt  Demo_All.cpp
Pi_Pico_Examples/Cpp_Examples/TimingTest/: CMakeLists.txt  Readme.txt  Timing_Test.cpp
docs/: CMakeLists.txt  Doxyfile  Doxyfile.bak  Doxyfile.in  DoxyfileA  DoxyfileA.bak  Examples.dox  More.txt  ProjectDoxygenLayout.xml  README.md  README.md.in  Theory_of_Operation.md  mainpage.dox  mainpage.md
docs/html/: Ardionoclass_l_c_d___i2_c.html  _a_hello_menu_8ino-example.html  _demo__a_l_l_8c-example.html  _demo__all_8c-example.html  _demo__all_8cpp-example.html  _examples_8dox.html  _hello_world_8c-example.html  _l_c_d___i2_c-_c_8cpp.html  _l_c_d___i2_c-_c_8h.html  _l_c_d___i2_c-_c_8h_source.html  _l_c_d___i2_c_8cpp.html  _l_c_d___i2_c_8hpp.html  _l_c_d___i2_c_8hpp_source.html  _mainp_page_8dox.html  _r_e_a_d_m_e_8md.html  _theory__of___operation_8md.html  _timing_test_8cpp-example.html  a00002.html  a00005.html  a00005_source.html  a00008.html  a00011.html  a00017.html  a00020.html  a00021.html  annotated.html  b_hello_menu_8ino-example.html  class_l_c_d___i2_c-members.html  class_l_c_d___i2_c.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  (+22 more)
src/: CMakeLists.txt  LCD_I2C-C.cpp  LCD_I2C-C.h  LCD_I2C.cpp  LCD_I2C.hpp  keywords.txt
src/include/: LCD_I2C-C.h  LCD_I2C.hpp
